# esp-webrtc-solution

./: .gitignore
components/codec_board/: CMakeLists.txt  board_cfg.txt  cfg_parse.c  codec_init.c  lcd_init.c
components/codec_board/drv/: pca9557.c  pca9557.h
components/codec_board/include/: codec_board.h
components/esp_capture/src/impl/capture_audio_src/: CMakeLists.txt  capture_aud_aec_src.c
components/esp_capture/src/impl/capture_simple_path/: esp_capture_path_simple.c
components/esp_webrtc/impl/peer_default/: CMakeLists.txt
components/esp_webrtc/src/: esp_webrtc.c
components/webrtc_apm/: CMakeLists.txt
components/webrtc_apm/include/: webrtc_apm.h
components/webrtc_apm/src/: webrtc_apm.cpp
solutions/common/: media_sys.h
solutions/openai_demo/: CMakeLists.txt  debug
solutions/openai_demo/main/: CMakeLists.txt  board.c  idf_component.yml  lcd_gui.c  lcd_gui.h  main.c  media_sys.c  openai_signaling.c  settings.h  webrtc.c
